--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,38 @@
-django-cms>=3.8,<3.9
-djangocms-admin-style>=2.0,<3.0
-django-treebeard>=4.0,<5.0
-
-djangocms-text-ckeditor>=4.0,<5.0
-djangocms-link>=3.0,<4.0
-djangocms-icon>=2.0,<3.0
-djangocms-style>=3.0,<4.0
-djangocms-googlemap>=2.0,<3.0
-djangocms-video>=3.0,<4.0
-djangocms-file>=3.0,<4.0
-djangocms-picture>=3.0,<4.0
-djangocms-bootstrap4>=2.0,<3.0
-easy_thumbnails
-django-filer>=1.3
-Django<3.2
-django-classy-tags>=2.0
-django-sekizai>=2.0
-django-mptt>0.9
-html5lib>=1.0.1
-Pillow>=3.0
-six
-pytz
-
-gunicorn
+asgiref==3.8.1                                                                             
+chardet==5.2.0
+cssselect2==0.8.0
+Django==3.1.14
+django-classy-tags==3.0.1
+django-cms==3.8.2
+django-filer==3.0.3
+django-formtools==2.4
+django-js-asset==2.0.0
+django-mptt==0.17.0
+django-polymorphic==3.1.0
+django-sekizai==3.0.1
+django-treebeard==4.4
+djangocms-admin-style==2.0.2
+djangocms-attributes-field==4.0.0
+djangocms-bootstrap4==2.0.0
+djangocms-file==3.0.1
+djangocms-googlemap==2.2.0
+djangocms-icon==2.0.0
+djangocms-link==3.1.1
+djangocms-picture==3.0.0
+djangocms-style==3.1.0
+djangocms-text-ckeditor==4.0.0
+djangocms-video==3.1.0
+easy-thumbnails==2.9
+gunicorn==23.0.0
+html5lib==1.1
+lxml==5.4.0
+packaging==25.0
+pillow==11.2.1
+pytz==2025.2
+reportlab==4.4.1
+setuptools==80.9.0
+six==1.17.0
+sqlparse==0.5.3
+svglib==1.5.1
+tinycss2==1.4.0
+webencodings==0.5.1
